Temp test with snuggle
Signed-off-by: subhramit <subhramit.bb@live.in>